# service/src/main/java/br/com/sw2you/realmeet/controller/AllocationController.java
@@ -27,25 +27,33 @@ public class AllocationController implements AllocationsApi {
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<AllocationDTO>> createAllocation(CreateAllocationDTO createAllocationDTO) {
+    public CompletableFuture<ResponseEntity<AllocationDTO>> createAllocation(
+        String apiKey,
+        CreateAllocationDTO createAllocationDTO
+    ) {
         return supplyAsync(() -> allocationService.createAllocation(createAllocationDTO), controllerExecutor)
             .thenApply(ResponseEntityUtils::created);
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<Void>> deleteAllocation(Long id) {
+    public CompletableFuture<ResponseEntity<Void>> deleteAllocation(String apiKey, Long id) {
         return runAsync(() -> allocationService.deleteAllocation(id), controllerExecutor)
             .thenApply(ResponseEntityUtils::noContent);
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<Void>> updateAllocation(Long id, UpdateAllocationDTO updateAllocationDTO) {
+    public CompletableFuture<ResponseEntity<Void>> updateAllocation(
+        String apiKey,
+        Long id,
+        UpdateAllocationDTO updateAllocationDTO
+    ) {
         return runAsync(() -> allocationService.updateAllocation(id, updateAllocationDTO), controllerExecutor)
             .thenApply(ResponseEntityUtils::noContent);
     }
 
     @Override
     public CompletableFuture<ResponseEntity<List<AllocationDTO>>> listAllocations(
+        String apiKey,
         String employeeEmail,
         Long roomId,
         LocalDate startAt,
