# service/src/main/java/br/com/sw2you/realmeet/controller/RoomController.java
@@ -25,23 +25,23 @@ public class RoomController implements RoomsApi {
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<RoomDTO>> getRoom(Long id) {
+    public CompletableFuture<ResponseEntity<RoomDTO>> getRoom(String apiKey, Long id) {
         return supplyAsync(() -> roomService.getRoom(id), controllerExecutor).thenApply(ResponseEntityUtils::ok);
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<RoomDTO>> createRoom(CreateRoomDTO createRoomDTO) {
+    public CompletableFuture<ResponseEntity<RoomDTO>> createRoom(String apiKey, CreateRoomDTO createRoomDTO) {
         return supplyAsync(() -> roomService.createRoom(createRoomDTO), controllerExecutor)
             .thenApply(ResponseEntityUtils::created);
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<Void>> deleteRoom(Long id) {
+    public CompletableFuture<ResponseEntity<Void>> deleteRoom(String apiKey, Long id) {
         return runAsync(() -> roomService.deleteRoom(id), controllerExecutor).thenApply(ResponseEntityUtils::noContent);
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<Void>> updateRoom(Long id, UpdateRoomDTO updateRoomDTO) {
+    public CompletableFuture<ResponseEntity<Void>> updateRoom(String apiKey, Long id, UpdateRoomDTO updateRoomDTO) {
         return runAsync(() -> roomService.updateRoom(id, updateRoomDTO), controllerExecutor)
             .thenApply(ResponseEntityUtils::noContent);
     }
