# service/src/main/resources/api.yml
@@ -12,6 +12,7 @@ paths:
       tags:
         - room
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -35,6 +36,7 @@ paths:
       tags:
         - room
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -54,6 +56,7 @@ paths:
       tags:
         - room
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -81,6 +84,8 @@ paths:
       operationId: createRoom
       tags:
         - room
+      parameters:
+        - $ref: '#/components/parameters/apiKey'
       requestBody:
         content:
           application/json:
@@ -99,10 +104,12 @@ paths:
 
   /allocations:
     post:
-      summary: 'Creates a allocation'
+      summary: 'Creates an allocation'
       operationId: createAllocation
       tags:
         - allocation
+      parameters:
+        - $ref: '#/components/parameters/apiKey'
       requestBody:
         content:
           application/json:
@@ -127,6 +134,7 @@ paths:
       tags:
         - allocation
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: employeeEmail
           in: query
           description: Email of the employee
@@ -170,6 +178,7 @@ paths:
       tags:
         - allocation
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -191,6 +200,7 @@ paths:
       tags:
         - allocation
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -316,3 +326,11 @@ components:
       description: the page of records to fetch (0 index based)
       schema:
         type: integer
+
+    apiKey:
+      name: api-key
+      in: header
+      description: the api key to authenticate the request
+      required: true
+      schema:
+        type: string
